fix: visibility of popups

--- a/blocks/element/element.css
+++ b/blocks/element/element.css
@@ -1,7 +1,7 @@
 .element{
   position: relative;
-  max-width: 282px;
-  max-height: 361px;
+  width: 282px;
+  height: 361px;
   background-color: white;
   border-radius: 10px;
   overflow: hidden;
