--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,4 +1,6 @@
 .popup{
+  overflow: hidden;
+  visibility: hidden;
   position: fixed;
   width: 100%;
   height: 0;
