--- a/blocks/profile/__info-wrapper/profile__info-wrapper.css
+++ b/blocks/profile/__info-wrapper/profile__info-wrapper.css
@@ -1,11 +1,13 @@
 .profile__info-wrapper{
   display: flex;
-  align-items: baseline;
+  align-items: center;
   margin-right: 18px;
+  margin-bottom: 16px;
 }
 
 @media screen and (max-width:880px){
   .profile__info-wrapper{
     margin-right: 0;
+    margin-bottom: 8px;
   }
 }
