--- a/blocks/profile/__title/profile__title.css
+++ b/blocks/profile/__title/profile__title.css
@@ -1,7 +1,6 @@
 .profile__title{
   font-size: 42px;
   line-height: 114%;
-  margin-bottom: 16px;
   max-width: 544px;
 }
 
@@ -23,8 +22,6 @@
     font-size: 27px;
     line-height: 33px;
     text-align: center;
-    margin-bottom: 8px;
-
   }
 }
 
